# recon2

./: .gitignore  Dockerfile  Readme.md  active_learning.py  augmentations.py  dann.py  distill.py  evaluate.py  export_onnx.py  infer.py  inspect_h5_full.py  meta.csv  metrics.py  pretrain_shubert.py  pyproject.toml  requirements.txt  run_grpc_server.py  setup_env.sh  track_lsa_4.py  train.py  train_lm.py  visualize_lsa2.py  vocab.txt
configs/: config.yaml  config_contrastive.yaml  config_dann.yaml  config_distill.yaml  config_lm.yaml  config_long_seq.yaml  config_scratch.yaml  config_vocab_1k.yaml  config_vocab_32k.yaml  skeleton.yaml
data/: compile_transcripts.py  domain_labels_example.csv  download.py  meta_generator.py
docs/: benchmark_results.json  benchmark_results.md  benchmarks.md  instalacion_despliegue.md
frontend/: index.html  package-lock.json  package.json
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/: __init__.py  corrnet.py  mcst_transformer.py  shubert.py  stgcn.py  sttn.py  transformer_lm.py
optical_flow/: raft_runner.py
scripts/: evaluate_subset.py  gen_protos.sh  generate_domain_csv.py  grpc_client.py  grpc_client_async.py  install_openface.sh  install_raft.sh  run_active_learning.py  wer_benchmark.py  ws_e2e_check.py
server/: app.py  decoder.py  export_model.py  feature_extraction.py  models.py  openapi.yaml
tests/: test_active_learning.py  test_api_validations.py  test_architecture_benchmark.py  test_augmentations.py  test_beam_search.py  test_dataset.py  test_dependency_checks.py  test_distill.py  test_download.py  (+13 more)
(+11 files in other folders)
